記号に使用できる文字の指定可能化と、「判別しづらい文字」追加

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,21 @@
                         <input type="checkbox" id="numbers" checked>
                         数字 (0-9)
                     </label>
-                    <label>
-                        <input type="checkbox" id="symbols" checked>
-                        記号 (!@#$%^&*()_+-=[]{}|;:,.<>/?)
-                    </label>
+                    <div class="symbol-setting">
+                        <label>
+                            <input type="checkbox" id="symbols" checked>
+                            記号
+                        </label>
+                        <input type="text" id="symbolsChars" value="!@#$%^&*()_+-=[]{}|;:,.<>/?" style="ime-mode: disabled;">
+                    </div>
                 </fieldset>
+            </div>
+
+            <div class="setting-group">
+                <label>
+                    <input type="checkbox" id="excludeConfusing" checked>
+                    判別しづらい文字を除外 (Ilji1Oo0)
+                </label>
             </div>
 
             <button id="generateBtn" class="generate-btn">生成する</button>
