記号の既定値を変更

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                             <input type="checkbox" id="symbols" checked>
                             記号
                         </label>
-                        <input type="text" id="symbolsChars" value="!@#$%^&*()_+-=[]{}|;:,.<>/?" style="ime-mode: disabled;">
+                        <input type="text" id="symbolsChars" value="!#$%&'()*+,-./:;<=>?@[\]^_`{|}~" style="ime-mode: disabled;">
                     </div>
                 </fieldset>
             </div>
