記号の既定値を元に戻した。「判別しづらい文字を除外」の既定値をfalseに修正した。

--- a/public/index.html
+++ b/public/index.html
@@ -36,14 +36,14 @@
                             <input type="checkbox" id="symbols" checked>
                             記号
                         </label>
-                        <input type="text" id="symbolsChars" value="!#$%&'()*+,-./:;<=>?@[\]^_`{|}~" style="ime-mode: disabled;">
+                        <input type="text" id="symbolsChars" value="!@#$%^&*()_+-=[]{}|;:,.<>/?" style="ime-mode: disabled;">
                     </div>
                 </fieldset>
             </div>
 
             <div class="setting-group">
                 <label>
-                    <input type="checkbox" id="excludeConfusing" checked>
+                    <input type="checkbox" id="excludeConfusing">
                     判別しづらい文字を除外 (Ilji1Oo0)
                 </label>
             </div>
