--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,9 @@
                     <div class="symbol-setting">
                         <label>
                             <input type="checkbox" id="symbols" checked>
-                            記号
+                            半角記号
                         </label>
-                        <input type="text" id="symbolsChars" value="!@#$%^&*()_+-=[]{}|;:,.<>/?" style="ime-mode: disabled;">
+                        <input type="text" id="symbolsChars" value="!@#$%^&*()_+-=[]{}|;:,.<>/?" inputmode="numeric">
                     </div>
                 </fieldset>
             </div>
